INCLUDE_DIRECTORIES(BEFORE "${CMAKE_SOURCE_DIR}/src")
LINK_DIRECTORIES(BEFORE "${CMAKE_SOURCE_DIR}/src")

SET(UNITTESTS "blob")

FILE(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/unittest")

FOREACH(UNITTEST ${UNITTESTS})
  FILE(GLOB UNITTEST_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}" "unittest/${UNITTEST}/*.[ch]" "unittest/${UNITTEST}/*.cpp")
  ADD_EXECUTABLE("unittest/${UNITTEST}" "${UNITTEST_SOURCES}")
  TARGET_LINK_LIBRARIES("unittest/${UNITTEST}" "-lppasskeeper")
ENDFOREACH()
