cmake_minimum_required(VERSION 2.6)

INCLUDE_DIRECTORIES(BEFORE "${CMAKE_SOURCE_DIR}/include")
LINK_DIRECTORIES(BEFORE "${CMAKE_SOURCE_DIR}/src")

SET(UNITTESTS "get-set-blob" "get-set-string")

FILE(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/unittest")

FOREACH(UNITTEST ${UNITTESTS})
  FILE(GLOB UNITTEST_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}" "${UNITTEST}/*.[ch]" "${UNITTEST}/*.cpp")
  ADD_EXECUTABLE("unittest/${UNITTEST}" "${UNITTEST_SOURCES}")
  TARGET_LINK_LIBRARIES("unittest/${UNITTEST}" "-lppasskeeper")
ENDFOREACH()
